Renamed the sample of Browser Intent URL services, and refactored the associated package. Added two readme files with documentation on how to use this wrapper: URL_Print_Readme_French.txt and URL_Print_Readme_English.txt

--- a/BrowserIntentURLServices/build.gradle
+++ b/BrowserIntentURLServices/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.zebra.intentprint"
+        applicationId "com.zebra.browserintenturl"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
