--- a/BrowserIntentURLServices/build.gradle
+++ b/BrowserIntentURLServices/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':PrintConnectIntentsWrapper')
+    api 'com.zebra.printconnectintentswrapper:printconnectintentswrapper:1.2.739'
 }
