--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation project(path: ':PrintConnectIntentsWrapper')
+    api 'com.zebra.printconnectintentswrapper:printconnectintentswrapper:1.2.739'
 }
