Added a pico sample and a documentation for the BrowserIntentURLServices module. Added the possibility to choose how to quit the activity (see upcoming documentation commit)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     api 'com.zebra.printconnectintentswrapper:printconnectintentswrapper:1.2.739'
+    //implementation project(':PrintConnectIntentsWrapper')
 }
