--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ buildscript {
     repositories {
         jcenter()
         google()
-        maven {
-            url  "https://dl.bintray.com/ltrudu/Zebra_Open_Source_Tools_And_Libraries"
-        }
+        //maven {
+        //    url  "https://dl.bintray.com/ltrudu/Zebra_Open_Source_Tools_And_Libraries"
+        //}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,9 +20,9 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven {
-            url  "https://dl.bintray.com/ltrudu/Zebra_Open_Source_Tools_And_Libraries"
-        }
+        //maven {
+        //    url  "https://dl.bintray.com/ltrudu/Zebra_Open_Source_Tools_And_Libraries"
+        //}
     }
 }
 
