--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 .idea/caches/build_file_checksums.ser
 .idea/caches/gradle_models.ser
 BrowserIntentURLServices/release/output.json
+BrowserIntentURLServices/release/BrowserIntentURLServices-release.apk
