Commented sample app in settings.gradle for JFrog publishing

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':PrintConnectIntentsWrapper', ':BrowserIntentURLServices'
+//TODO: uncomment to access to the sample app
+include ':PrintConnectIntentsWrapper'//,':app',':BrowserIntentURLServices'
